force-app/main/default/objects/ContactAddresses__c/ContactAddresses__c.object-meta.xml
<CustomObject>
    <label>Contact&apos;s Addresses</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact&apos;s Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>