force-app/main/default/objects/ContactAddresses__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <inlineHelpText>Name of the City where this Home is located</inlineHelpText>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>