force-app/main/default/objects/ContactAddresses__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the Contact who owns this Home. Search via Lookup or create New</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact&apos;s Addresses</relationshipLabel>
    <relationshipName>Contact_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>