force-app/main/default/objects/ContactAddresses__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <inlineHelpText>Till When did the Contact stay at this home. Select the end date via calendar</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>