force-app/main/default/objects/ContactAddresses__c/fields/Number_of_Days_Spent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Spent__c</fullName>
    <formula>TEXT(EndDate__c  -  StartDate__c) &amp;&quot; Days &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Days spent at this property. will be calculated via Formula</inlineHelpText>
    <label>Number of Days Spent</label>
    <type>Text</type>
</CustomField>