force-app/main/default/objects/ContactAddresses__c/fields/OwnedSince__c.field-meta.xml
<CustomField>
    <fullName>OwnedSince__c</fullName>
    <inlineHelpText>Since when has the Contact Owned this Property, Select via Calendar</inlineHelpText>
    <label>Owned Since</label>
    <type>Date</type>
</CustomField>