force-app/main/default/objects/ContactAddresses__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <inlineHelpText>When did the Contact last visit this home. Select the start date via calendar</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>