force-app/main/default/objects/ContactAddresses__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Enter the type or purpose of the Home it is, Select one from the Picklist.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>International Home,</fullName>
            </value>
            <value>
                <fullName>Annual Conference Home</fullName>
            </value>
            <value>
                <fullName>Summer Holiday Home</fullName>
            </value>
            <value>
                <fullName>Christmas Break Home</fullName>
            </value>
            <value>
                <fullName>Dream Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>