force-app/main/default/objects/ContactAddresses__c/fields/Zip_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Zip_PostalCode__c</fullName>
    <label>Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>